# gedoc-ifes-busca

./: .dockerignore  .gitignore  .mcp.json  .vercelignore  README.md  buscar_gedoc.py  index.html  render.yaml  vercel.json
.claude/agents/: pr-reviewer.md  tauri-mvc-expert.md  ui-ux-designer.md
.github/workflows/: ci.yml  deploy.yml  release.yml
.specify/: extensions.yml  feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
app/: .env.example  .env.production  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.vue  main.ts  ui.config.ts
app/src/assets/: fonts.css  main.css  tokens.css
app/src/components/base/: EmptyState.vue  ErrorState.vue  LoadingState.vue
app/src/components/busca/: CategoriaChips.vue  DocItem.vue  RelatorioAcoes.vue
app/src/router/: index.ts
app/src/services/: ipc.ts
app/src/stores/: busca.ts  categorias.ts
app/src/utils/: siape.ts
app/src/views/: BuscaView.vue  CategoriasView.vue
app/tests/: BuscaView.spec.ts  CategoriaChips.spec.ts  CategoriasView.spec.ts  DocItem.spec.ts  RelatorioAcoes.spec.ts  busca_store.spec.ts  estados.spec.ts  estados_busca.spec.ts  ipc.spec.ts  setup.ts  siape.spec.ts
config/: .env.example  categoria.json
core/: Cargo.toml
core/src/: dto.rs  lib.rs
core/src/domain/: categoria.rs  documento.rs  nome_arquivo.rs  texto.rs
core/src/ports/: classificador.rs  gedoc_repository.rs  ia.rs
core/src/services/: cache.rs  classificador.rs  downloader.rs  filtro.rs  gedoc_parse.rs  gedoc_repository.rs  mod.rs  relatorio.rs  resumidor.rs
core/src/usecases/: buscar.rs  documento.rs  exportar.rs  mod.rs
core/tests/: classificar.rs  classificar_llm.rs  filtro_siape.rs  gedoc_parse.rs  nome_arquivo.rs  resumir.rs  resumir_lote.rs  siape_valido.rs
core/tests/fixtures/: home_pesquisa.html  resposta_ok.xml  resposta_pagina2.xml  resposta_redirect.xml
docs/: analise-e-projeto.md  arquitetura.md  brief-web.md  epics-e-tasks.md  guia-usuario-web.md  ontology.yaml  plano-web.md
prototipo/: app.html  categorias.html  categorias_app.html  mockup.html
server/: .gitignore  Cargo.toml  Dockerfile  fly.toml
server/src/: erro.rs  lib.rs  main.rs  rotas.rs  sessao.rs  ttl.rs
server/tests/: api.rs
specs/001-gedoc-siape-toolkit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-gedoc-siape-toolkit/checklists/: requirements.md
specs/001-gedoc-siape-toolkit/contracts/: ipc-commands.md
specs/002-ui-nuxt-minimalista/: design-tokens.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ui-nuxt-minimalista/contracts/: ui-components.md
specs/003-versao-web/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-versao-web/checklists/: requirements.md
specs/003-versao-web/contracts/: http-api.md
specs/004-ordenar-por-ano/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-ordenar-por-ano/checklists/: requirements.md
specs/005-web-remove-crud-categorias/: plan.md  spec.md  tasks.md
specs/005-web-remove-crud-categorias/checklists/: requirements.md
specs/006-ia-prompt-categorias/: plan.md  spec.md  tasks.md
specs/006-ia-prompt-categorias/checklists/: requirements.md
specs/007-relatorio-design-system/: plan.md  spec.md  tasks.md
specs/007-relatorio-design-system/checklists/: requirements.md
specs/008-relatorio-botao-pdf/: plan.md  spec.md  tasks.md
specs/008-relatorio-botao-pdf/checklists/: requirements.md
specs/009-busca-por-nome/: plan.md  spec.md  tasks.md
specs/009-busca-por-nome/checklists/: requirements.md
specs/010-classificacao-lote/: spec.md
specs/010-classificacao-lote/checklists/: requirements.md
specs/011-resumo-lote/: spec.md
specs/011-resumo-lote/checklists/: requirements.md
src/: app.py  app_categorias.py  categorizar.py  md_para_pdf.py  mistral_client.py  resumir_mistral.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: buscar.rs  categorias.rs  documento.rs  exportar.rs  mod.rs
src-tauri/src/domain/: categoria.rs  documento.rs  mod.rs  nome_arquivo.rs  siape.rs  texto.rs
src-tauri/src/ports/: classificador.rs  gedoc_repository.rs  http.rs  ia.rs  mod.rs
src-tauri/src/services/: categorias.rs  classificador.rs  downloader.rs  empacotador.rs  filtro.rs  gedoc_parse.rs  gedoc_repository.rs  mod.rs  relatorio.rs  resumidor.rs  texto_pdf.rs
src-tauri/tests/: classificar.rs  classificar_llm.rs  filtro_siape.rs  gedoc_parse.rs  nome_arquivo.rs  resumir.rs  resumir_lote.rs  siape_valido.rs
src-tauri/tests/fixtures/: resposta_duplicada.xml  resposta_erro.xml
