[package]
name = "gedocs"
version = "0.1.0"
description = "GeDoc IFES Toolkit - consulta de documentos por SIAPE"
edition = "2021"
rust-version = "1.80"

[lib]
name = "gedocs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "gedocs"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Núcleo compartilhado (domínio/serviços/ports/use-cases/dto), SEM Tauri —
# mesma lógica usada pela versão web (`server/`). Regra de negócio não é
# duplicada aqui (Princípio V/DRY).
gedocs-core = { path = "../core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
